# Gazebo-L1

./: CMakeLists.txt  README.md  package.xml
cipobot/: CMakeLists.txt  model.config  model.sdf  package.xml
cipobot/model/: model.config  model.sdf
cipobot/model/cipobot/: model.sdf
cipobot/model/cipobot/meshes/: model.dae
gazebo_plugin_tutorial/: CMakeLists.txt  model_push.cc  system_gui.cc
gazebo_plugins/: CMakeLists.txt  package.xml  room_light.cc  room_light.h
gazebo_worlds/: CMakeLists.txt  package.xml
gazebo_worlds/launch/: gazebo.launch
gazebo_worlds/models/house/: model.sdf
gazebo_worlds/worlds/: cipobot.world
launch/: gazebo.launch
robot/: model.config  model.sdf
